--- a/web/index.html.sample
+++ b/web/index.html.sample
@@ -17,7 +17,7 @@
 
 <script>
 $(document).ready(function(){
-    window.onresize = close_attach_auto;
+//    window.onresize = close_attach_auto;
     DIV_LISTPOST    = $('div#listpost div#list');
     DIV_HEADER      = $('div#header');
     DIV_CLASS       = $('div#class_div');
